--- a/environment.yml
+++ b/environment.yml
@@ -1,25 +1,15 @@
 name: risk
 channels:
-- anaconda
 - conda-forge
+- anaconda
 - defaults
 dependencies:
-- networkx=2.0=py36hefccab9_0
-- backports=1.0=py36_1
-- backports.functools_lru_cache=1.4=py36_1
-- cycler=0.10.0=py36_0
-- freetype=2.7=1
-- libpng=1.6.28=0
-- matplotlib=2.1.0=py36_0
-- patsy=0.4.1=py36_0
-- pyparsing=2.2.0=py36_0
-- statsmodels=0.8.0=py36_0
-- testfixtures=4.10.0=py36_0
 - appnope=0.1.0=py36_0
 - bleach=1.5.0=py36_0
 - boto=2.48.0=py36_0
 - bz2file=0.98=py36_0
 - certifi=2016.2.28=py36_0
+- cycler=0.10.0=py36_0
 - decorator=4.1.2=py36_0
 - entrypoints=0.2.3=py36_0
 - gensim=2.3.0=np113py36_0
@@ -41,18 +31,21 @@ dependencies:
 - mkl=2017.0.3=0
 - nbconvert=5.2.1=py36_0
 - nbformat=4.4.0=py36_0
+- networkx=2.0=py36hefccab9_0
 - notebook=5.0.0=py36_0
 - numpy=1.13.1=py36_0
 - openssl=1.0.2l=0
 - pandas=0.20.3=py36_0
 - pandocfilters=1.4.2=py36_0
 - path.py=10.3.1=py36_0
+- patsy=0.4.1=py36_0
 - pexpect=4.2.1=py36_0
 - pickleshare=0.7.4=py36_0
 - pip=9.0.1=py36_1
 - prompt_toolkit=1.0.15=py36_0
 - ptyprocess=0.5.2=py36_0
 - pygments=2.2.0=py36_0
+- pyparsing=2.2.0=py36_0
 - pyqt=5.6.0=py36_2
 - python=3.6.2=0
 - python-dateutil=2.6.1=py36_0
@@ -61,7 +54,6 @@ dependencies:
 - qt=5.6.2=2
 - qtconsole=4.3.1=py36_0
 - readline=6.2=2
-- requests=2.14.2=py36_0
 - scipy=0.19.1=np113py36_0
 - setuptools=36.4.0=py36_1
 - simplegeneric=0.8.1=py36_1
@@ -79,15 +71,26 @@ dependencies:
 - widgetsnbextension=3.0.2=py36_0
 - xz=5.2.3=0
 - zlib=1.2.11=0
+- backports=1.0=py36_1
+- backports.functools_lru_cache=1.4=py36_1
+- freetype=2.7=1
+- libpng=1.6.28=0
+- matplotlib=2.1.0=py36_0
+- requests-cache=0.4.13=py36_0
+- statsmodels=0.8.0=py36_0
+- testfixtures=4.10.0=py36_0
+- beautifulsoup4=4.6.0=py36_0
+- nltk=3.2.4=py36_0
+- requests=2.14.2=py36_0
+- scikit-learn=0.19.0=np113py36_0
 - pip:
   - backports.functools-lru-cache==1.4
   - ipython-genutils==0.2.0
   - jupyter-client==5.1.0
   - jupyter-console==5.2.0
   - jupyter-core==4.3.0
-  - node2vec==0.0.1
   - peppercorn==0.5
   - prompt-toolkit==1.0.15
+  - risk-analytics (/Users/pavel/py_pavel/QRM_workshops/risk_analytics)==0.0.1.dev0
   - smart-open==1.5.3
-
 
